# Redis-AudioScout

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  auscout.cpp  auscout_redis.cpp  module.cpp  testclient.cpp
